--- a/s3_website.yml
+++ b/s3_website.yml
@@ -2,56 +2,19 @@ s3_id: <%= ENV['ROBOCAT_DEPLOY_AWS_S3_ACCESS_KEY_ID'] %>
 s3_secret: <%= ENV['ROBOCAT_DEPLOY_AWS_S3_SECRET_ACCESS_KEY'] %>
 s3_bucket: itsbreaking.com
 
-# Below are examples of all the available configurations.
-# See README for more detailed info on each of them.
+cloudfront_distribution_id: <%= ENV['BREAKING_CF_DIST_ID']
 
 site: public
 
-# max_age:
-#   "assets/*": 6000
-#   "*": 300
+max_age:
+    "*": 300
 
-# gzip:
-#   - .html
-#   - .css
-#   - .md
-# gzip_zopfli: true
+gzip: true
 
-# See http://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region for valid endpoints
-# s3_endpoint: ap-northeast-1
+ignore_on_server: downloads
 
-ignore_on_server:
-	- downloads
-
-# exclude_from_upload:
-#   - those_folders_of_stuff
-#   - i_wouldnt_want_to_upload
-
-# s3_reduced_redundancy: true
-
-# cloudfront_distribution_id: your-dist-id
-
-# cloudfront_distribution_config:
-#   default_cache_behavior:
-#     min_TTL: <%= 60 * 60 * 24 %>
-#   aliases:
-#     quantity: 1
-#     items:
-#       CNAME: your.website.com
-
-# cloudfront_invalidate_root: true
-
-# concurrency_level: 5
-
-# redirects:
-#   index.php: /
-#   about.php: about.html
-#   music-files/promo.mp4: http://www.youtube.com/watch?v=dQw4w9WgXcQ
-
-# routing_rules:
-#   - condition:
-#       key_prefix_equals: blog/some_path
-#     redirect:
-#       host_name: blog.example.com
-#       replace_key_prefix_with: some_new_path/
-#       http_redirect_code: 301
+cloudfront_distribution_config:
+    aliases:
+        quantity: 1
+        items:
+            CNAME: itsbreaking.com
