--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp-coffee": "^2.3.1",
     "gulp-compile-handlebars": "^0.4.4",
     "gulp-concat": "^2.5.0",
+    "gulp-copy": "0.0.2",
     "gulp-if": "^1.2.5",
     "gulp-livereload": "^3.7.0",
     "gulp-minify-html": "^0.1.8",
