--- a/s3_website.yml
+++ b/s3_website.yml
@@ -2,7 +2,7 @@ s3_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
 s3_secret: <%= ENV['S3_SECRET_ACCESS_KEY'] %>
 s3_bucket: itsbreaking.com
 
-cloudfront_distribution_id: <%= ENV['BREAKING_CF_DIST_ID']  %>
+cloudfront_distribution_id: EWSSFTJSLFQ91
 
 site: public
 
